@@ -1,0 +1,8 @@
+the value of cc is 0 and #double words is 2
+the value of cc is 0 and #double words is 2
+The z/Architecture architectural mode is installed and active
+the value of cc is 0 and #double words is 2
+STFLE facility is installed
+the value of cc is 3 and #double words is 2
+the value of cc is 3 and #double words is 2
+The z/Architecture architectural mode is installed and active
