@@ -262,6 +262,8 @@ fixed
 
 275710 - s390x: get rid of redundant address mode calculation
 
+271776 - s390x: Support STFLE instruction
+
 
 Release 3.6.1 (16 February 2011)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
